# integration-hiper-delivery-jobs

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/service/: synchronization_service.py
app/service/deliverydireto/: deliverydireto_service.py
app/service/hiper/: hiper_service.py
config/: redis.py
